[package]
name = "rodu"
version = "0.1.3"
authors = ["Coien-rr <972054003@qq.com>"]
description = "Tiny Todo CLI To Add Task In Current Dir"
repository = "https://github.com/Coien-rr/rodu"
license = "MIT"
readme = "README.md"
keywords = ["cli", "todo", "task"]
categories = ["command-line-utilities"]
edition = "2021"

[dependencies]
git2 = "0.18.1"
